# podcast-rss-generator

./: .dprint.json  .gitignore  Dockerfile  LICENSE  README.md  action.yaml  actions.yml  generator.py  metadata.yaml.example  podcast_config.example.yaml  pyproject.toml  requirements.txt  rss_generator.py  videos.csv.example
.github/workflows/: python-tests.yml
podcast_rss_generator/: __init__.py  cli.py  generator.py
tests/: conftest.py  test_cli.py  test_generator.py  test_rss_generator.py
tests/data/: test_metadata.yaml  test_videos.csv
